--- a/Lab02_Web/vite.config.json
+++ b/Lab02_Web/vite.config.json
@@ -1,6 +1,7 @@
 import { defineConfig } from 'vite';
 
 export default defineConfig({
+  base: '/Lab2_Web/',
   esbuild: {
     jsxFactory: 'createElement',
     jsxFragment: 'createFragment',
@@ -15,4 +16,5 @@ export default defineConfig({
     outDir: 'dist',
     minify: 'esbuild'
   }
+
 });
